tests/baselines/reference/contextuallyTypeCommaOperator02.errors.txt
tests/cases/conformance/types/contextualTypes/commaOperator/contextuallyTypeCommaOperator02.ts(3,1): error TS2322: Type '(a: string) => number' is not assignable to type '(a: string) => string'.
  Type 'number' is not assignable to type 'string'.
tests/cases/conformance/types/contextualTypes/commaOperator/contextuallyTypeCommaOperator02.ts(4,11): error TS2322: Type 'string' is not assignable to type 'number'.


==== tests/cases/conformance/types/contextualTypes/commaOperator/contextuallyTypeCommaOperator02.ts (2 errors) ====
    let x: (a: string) => string;
    
    x = (100, a => {
    ~
!!! error TS2322: Type '(a: string) => number' is not assignable to type '(a: string) => string'.
!!! error TS2322:   Type 'number' is not assignable to type 'string'.
        const b: number = a;
              ~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
        return b;
    });